--- a/product.html
+++ b/product.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>系列框架</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-  <script type="module" crossorigin src="/The-RWD-Optical/assets/main-ad0f2e83.js"></script>
-  <link rel="stylesheet" href="/The-RWD-Optical/assets/main-e04e7755.css">
+  <script type="module" crossorigin src="/The-RWD-Optical/assets/main-dca06724.js"></script>
+  <link rel="stylesheet" href="/The-RWD-Optical/assets/main-d18ea624.css">
 </head>
   <body>
    <header class="header">
@@ -87,8 +87,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4> 
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
