--- a/pages/product.html
+++ b/pages/product.html
@@ -48,8 +48,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4>                  
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
@@ -61,8 +61,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4> 
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
@@ -87,8 +87,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4> 
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
@@ -100,8 +100,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4> 
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
@@ -113,8 +113,8 @@
                     <h4 class="h4 text-primary">NTD3,490</h4> 
                   </div>
                   <div class="d-flex gap-2">
-                    <p class="product-color01"></p>
-                    <p class="product-color02"></p>
+                    <p class="product-style01"></p>
+                    <p class="product-style02"></p>
                   </div>
                 </div>
               </li>
